# accounting-etl

./: .gitignore  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: release.yml
src/accounting_etl/: config.py  database.py  email_fetcher.py  excel_builder.py  gui.py  main.py  pdf_parser.py  update_checker.py
