[project]
name = "accounting-etl"
version = "1.0.0"
description = "Automated credit card statement processing for accountants"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accounting_etl"]

[project.scripts]
accounting-etl = "accounting_etl.main:main"
